--- a/Collider2D/settings/v2/packages/project.json
+++ b/Collider2D/settings/v2/packages/project.json
@@ -16,5 +16,11 @@
       "1": 6,
       "2": 6
     }
+  },
+  "general": {
+    "designResolution": {
+      "width": 960,
+      "height": 640
+    }
   }
 }
