--- a/Collider2D/settings/v2/packages/project.json
+++ b/Collider2D/settings/v2/packages/project.json
@@ -21,15 +21,20 @@
       {
         "index": 5,
         "name": "Collider"
+      },
+      {
+        "index": 6,
+        "name": "platform"
       }
     ],
     "collisionMatrix": {
-      "0": 1,
+      "0": 65,
       "1": 6,
       "2": 6,
       "3": 16,
       "4": 8,
-      "5": 32
+      "5": 32,
+      "6": 1
     }
   },
   "general": {
